--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=JAVA_DATN_Shoes_Nordic;encrypt=true;trustServerCertificate=true;
-spring.datasource.username=PH25315
-spring.datasource.password=1234
+spring.datasource.username=sa
+spring.datasource.password=123456
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
