--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,9 @@ multipart.enabled=true
 multipart.max-file-size=100MB
 multipart.max-request-size=100MB
 multipart.file-size-threshold=0
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
 #spring.thymeleaf.prefix=/WEB-INF/templates/
 #spring.thymeleaf.suffix=.html
 #spring.thymeleaf.mode=HTML
