--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,9 @@ multipart.enabled=true
 multipart.max-file-size=100MB
 multipart.max-request-size=100MB
 multipart.file-size-threshold=0
+#paypal.mode= sandbox
+#paypal.client.app=AULmP4hY8H6MFY9Lmab5BoFySoB9VhOuxy6E_IXkS8_EU9WhtKpViJqMyW9qk_jsB9QPZxYcmW_ruL7r
+#paypal.client.secret=EG1iJXQlqTB9sla8oXuhAbFHhNiuoq3kx3jNavaXBGyuOh-x7yBICRozGH2a2I4SeQUWk8Ndwt9yuHSN
 #spring.thymeleaf.prefix=/WEB-INF/templates/
 #spring.thymeleaf.suffix=.html
 #spring.thymeleaf.mode=HTML
