--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,11 @@ spring.jpa.show-sql=true
 spring.mvc.view.prefix=/WEB-INF/templates/
 spring.mvc.view.suffix =.jsp
 multipart.enabled=true
-multipart.max-file-size=100MB
-multipart.max-request-size=100MB
+#multipart.max-file-size=100MB
+#multipart.max-request-size=100MB
 multipart.file-size-threshold=0
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
 #paypal.mode= sandbox
 #paypal.client.app=AULmP4hY8H6MFY9Lmab5BoFySoB9VhOuxy6E_IXkS8_EU9WhtKpViJqMyW9qk_jsB9QPZxYcmW_ruL7r
 #paypal.client.secret=EG1iJXQlqTB9sla8oXuhAbFHhNiuoq3kx3jNavaXBGyuOh-x7yBICRozGH2a2I4SeQUWk8Ndwt9yuHSN
