--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=JAVA_DATN_Shoes_Nordic;encrypt=true;trustServerCertificate=true;
-spring.datasource.username=sa
-spring.datasource.password=123456
+spring.datasource.username=PH25315
+spring.datasource.password=1234
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
@@ -9,8 +9,8 @@ spring.jpa.show-sql=true
 spring.mvc.view.prefix=/WEB-INF/templates/
 spring.mvc.view.suffix =.jsp
 multipart.enabled=true
-multipart.max-file-size=100MB
-multipart.max-request-size=100MB
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
 multipart.file-size-threshold=0
 #paypal.mode= sandbox
 #paypal.client.app=AULmP4hY8H6MFY9Lmab5BoFySoB9VhOuxy6E_IXkS8_EU9WhtKpViJqMyW9qk_jsB9QPZxYcmW_ruL7r
